优化了UI界面，实现了常用城市列表的直接动画切换，但是手势识别还没有完成，是用两个按钮切换的，而且现在还存在非常用城市的点击查询不能用的bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">酷哦天气</string>
+    <string name="item1">常用城市管理</string>
+    <string name="item2">分享天气信息</string>
+    <string name="item3">后台自动更新</string>
 </resources>
